syntax = "proto3";

package helyim;

//////////////////////////////////////////////////

service Helyim {
  rpc Heartbeat(stream HeartbeatRequest) returns (stream HeartbeatResponse) {}
  rpc LookupVolume (LookupVolumeRequest) returns (LookupVolumeResponse) {}
}

//////////////////////////////////////////////////

message HeartbeatRequest {
  string ip = 1;
  uint32 port = 2;
  string public_url = 3;
  uint32 max_volume_count = 4;
  uint64 max_file_key = 5;
  string data_center = 6;
  string rack = 7;
  uint32 admin_port = 8;
  repeated VolumeInformationMessage volumes = 9;
}
message HeartbeatResponse {
  uint64 volume_size_limit = 1;
  string secret_key = 2;
  string leader = 3;
}

message VolumeInformationMessage {
  uint32 id = 1;
  uint64 size = 2;
  string collection = 3;
  uint64 file_count = 4;
  uint64 delete_count = 5;
  uint64 deleted_bytes = 6;
  bool read_only = 7;
  uint32 replica_placement = 8;
  uint32 version = 9;
  uint32 ttl = 10;
}

message LookupVolumeRequest {
  repeated string volumes = 1;
  string collection = 2;
}

message LookupVolumeResponse {
  message VolumeLocation {
    uint32 volumeId = 1;
    repeated Location locations = 2;
    string error = 3;
  }
  repeated VolumeLocation volumeLocations = 1;
}

message Location {
  string url = 1;
  string public_url = 2;
}